--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -71,3 +71,9 @@
 </section>
 
 <app-meu-form></app-meu-form>
+
+<section>
+  <h3>Input/Output Properties</h3>
+
+  <app-curso [nome]="nomeDoCurso"></app-curso>
+</section>
