--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -76,4 +76,9 @@
   <h3>Input/Output Properties</h3>
 
   <app-curso [nome]="nomeDoCurso"></app-curso>
+
+  <contador [valor]="valorInicial"
+    (mudouValor)="onMudouValor($event)"
+  ></contador>
+
 </section>
