--- a/data-binding/src/app/app.component.html
+++ b/data-binding/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-data-binding></app-data-binding>
-<app-ciclo [valorInicial]="valor" *ngIf="!deletarCiclo"></app-ciclo>
+<!--<app-ciclo [valorInicial]="valor" *ngIf="!deletarCiclo"></app-ciclo>
 <button (click)="mudarValor()" class="btn btn-primary">Mudar Valor</button>
-<button (click)="destruirCiclo()" class="btn btn-danger">Deletar</button>
+<button (click)="destruirCiclo()" class="btn btn-danger">Deletar</button-->
