--- a/data-binding/src/app/output-property/output-property.component.html
+++ b/data-binding/src/app/output-property/output-property.component.html
@@ -1,5 +1,5 @@
 <div>
   <button class="btn btn-warning" style="margin-right: 5px; height: 35px;" (click)="decrementa()">-</button>
-  <input type="text" readonly [value]="valor">
+  <input type="text" readonly [value]="valor" #campoInput>
   <button class="btn btn-primary" style="margin-left: 5px; height: 35px;" (click)="incrementa()">+</button>
 </div>
